# heureka_entry_task

./: .gitignore  README.md  docker-compose.yaml  improvements.md  improvements.py  pyproject.toml
heureka_entry_task/: app.py  base.py  controller.py  models.py
heureka_entry_task/db/: db_models.py  session.py
heureka_entry_task/rabbit_mq/: consumer.py  publisher.py
tests/: conftest.py
tests/unit_tests/: test_controller.py
