[tool.poetry]
name = "heureka-entry-task"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
black = "^24.2.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
aio-pika = "^9.4.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
